--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container text-center text-white">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h1 class="display-2 fw-bold mb-3">Build Something Amazing.</h1>
+                    <h1 class="display-2 fw-bold mb-3">Clear the Clutter, Keep the Peace</h1>
                     <p class="lead mb-4">This is your mobile-first landing page. Simple, elegant, and ready for your custom domain.</p>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                         <a href="#features" class="btn btn-primary btn-lg px-4 gap-3">Get Started</a>
